# fightstick

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
3d-models/: base.scad  base.stl  panel.scad  panel.stl  settings.scad  test.scad
3d-models/lib/: screw-base.scad
docs/: 00_index.md  10_assembly.md  30_firmware.md
firmware/: CMakeLists.txt  STM32F042KxTx_FLASH.ld  bootloader.c  bootloader.h  descriptors.c  fightstick.wara  idle.c  idle.h  main.c
sch/: fightstick.kicad_prl  fightstick.kicad_pro  fightstick.kicad_sch  sym-lib-table
